package entrega4;



public interface ComponenteRestaurante {
    void agregar(ComponenteRestaurante componente);
    void eliminar(ComponenteRestaurante componente);
    void mostrar();
}